# scut-2017-fall-os-labs

./: .gitignore  Dockerfile  README.md  dev_into.sh
exp_1/: CMakeLists.txt  README.md  exp_1.sh
exp_1/src/: an_ch2_1a.cpp  an_ch2_1b.cpp  new_thread.cpp
exp_2/: CMakeLists.txt  README.md  exp_2.sh
exp_2/include/: sem_p.h
exp_2/src/: barber_sem.cpp  produce_consume.cpp  producer_consumer.cpp  producer_consumer_1.cpp  producer_consumer_sem.cpp  reader_writer.cpp  sem_p.cpp
exp_3/: CMakeLists.txt  README.md  exp_3.sh
exp_3/include/: color.h  find.h
exp_3/src/: find.cpp
exp_4/: CMakeLists.txt  README.md  exp_4.sh
exp_4/include/: QShell.h  color.h
exp_4/src/: QShell.cpp  doit.cpp
