cmake_minimum_required(VERSION 2.8.4)
project(exp_1)
set(target_1 an_ch2_1b)
set(target_2 an_ch2_1a)
set(target_3 new_thread)
find_package(Threads REQUIRED)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin)
add_executable(${target_1} src/an_ch2_1b.cpp)
add_executable(${target_2} src/an_ch2_1a.cpp)
add_executable(${target_3} src/new_thread.cpp)

if(THREADS_HAVE_PTHREAD_ARG)
  set_property(TARGET ${target_3} PROPERTY COMPILE_OPTIONS "-pthread")
  set_property(TARGET ${target_3} PROPERTY INTERFACE_COMPILE_OPTIONS "-pthread")
endif()
if(CMAKE_THREAD_LIBS_INIT)
  target_link_libraries(${target_3} "${CMAKE_THREAD_LIBS_INIT}")
endif()

